<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/initialValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/initial_value"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/recordComments"
            android:layout_marginStart="16dp" />

        <EditText
            android:id="@+id/recordComments"
            android:layout_width="292dp"
            android:layout_height="82dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/comments"
            android:inputType="textMultiLine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recordDate"
            tools:ignore="MissingConstraints,RtlHardcoded" />

        <EditText
            android:id="@+id/recordName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded"
            android:maxLines="1" />

        <EditText
            android:id="@+id/recordDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/recordName"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/currentValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/current_value"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/initialValue"
            android:layout_marginStart="16dp" />

        <Button
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/increase"
            android:textSize="18sp"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/currentValue"
            android:onClick="plusButtonClicked"
            app:layout_constraintRight_toLeftOf="@+id/button4"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/decrease"
            android:textSize="18sp"
            tools:ignore="MissingConstraints,RtlHardcoded"
            android:onClick="minusButtonClicked"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button3"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/currentValue"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="16dp" />

        <TextView
            android:id="@+id/dpIniVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="30sp"
            tools:ignore="HardcodedText,MissingConstraints,RtlHardcoded"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/initialValue"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="29dp"
            app:layout_constraintTop_toBottomOf="@+id/recordComments" />

        <TextView
            android:id="@+id/dpCurrentVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:text="0"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@+id/currentValue"
            app:layout_constraintTop_toBottomOf="@+id/dpIniVal"
            tools:ignore="HardcodedText,RtlHardcoded"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp" />

        <Button
            android:id="@+id/saveRecord"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:text="@string/save_record"
            android:onClick="saveButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="0.583"
            tools:ignore="MissingConstraints,RtlHardcoded"
            app:layout_constraintRight_toLeftOf="@+id/delRecord"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/delRecord"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            android:text="@string/deleteRecord"
            android:onClick="delButtonClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            tools:ignore="MissingConstraints,RtlHardcoded"
            app:layout_constraintVertical_bias="0.583"
            app:layout_constraintLeft_toRightOf="@+id/saveRecord"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>